--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "react-native": "0.72.10",
     "expo-linear-gradient": "~12.3.0",
     "expo-haptics": "~12.4.0",
-    "expo-av": "~13.4.1"
+    "expo-av": "~13.4.1",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
