--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "private": true,
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
+    "start": "EXPO_NO_TELEMETRY=1 expo start",
+    "mobile": "EXPO_NO_TELEMETRY=1 expo start --tunnel",
+    "ios": "EXPO_NO_TELEMETRY=1 expo start --ios",
+    "android": "EXPO_NO_TELEMETRY=1 expo start --android",
+    "web": "EXPO_NO_TELEMETRY=1 expo start --web",
     "build:web": "expo export --platform web",
     "lint": "expo lint",
-    "start": "node server.js",
     "server": "node server.js"
   },
   "dependencies": {
